# vulkan_c

./: CMakeLists.txt  README.md  flake.nix
.cache/clangd/index/: color.h.B086DC7BC49CBE4D.idx  main.c.F669DC569D75CC12.idx  platform.c.B755F69D6FC2A59C.idx  platform.h.262E1CBF8E7AADC8.idx  rendering.c.F0F42C8126D47275.idx  rendering.h.42F40B46CB3D69D6.idx  vulkan_init.c.0B7662FE16392224.idx  vulkan_init.h.6465CD1C22B44858.idx
src/: color.h  main.c  platform.c  platform.h  rendering.c  rendering.h  vulkan_init.c  vulkan_init.h
